<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/cover_blurred_blinding_eyes"
    android:paddingStart="@dimen/upload_fragment_upload_padding"
    android:paddingEnd="@dimen/upload_fragment_upload_padding"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@style/AppTextView"
        android:layout_marginTop="@dimen/upload_fragment_upload_title_margin_top"
        android:text="@string/upload_fragment_upload_track"
        android:textSize="@dimen/upload_fragment_upload_title_text"
        android:textColor="@color/primary_text_light" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/upload_fragment_upload_step1_margin_top"
        android:textSize="@dimen/upload_fragment_upload_step_text"
        style="@style/AppTextView"
        android:textColor="@color/primary_text_light"
        android:text="@string/upload_fragment_upload_step1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="@dimen/upload_fragment_upload_track_title_text"
        android:minWidth="@dimen/et_min_width"
        android:drawableEnd="@drawable/cancel"
        android:layout_marginTop="@dimen/upload_fragment_upload_track_title_margin_top"
        style="@style/AppEditText"
        android:hint="@string/upload_fragment_upload_track_title_hint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/upload_fragment_upload_step2_margin_top"
        android:textSize="@dimen/upload_fragment_upload_step_text"
        style="@style/AppTextView"
        android:textColor="@color/primary_text_light"
        android:text="@string/upload_fragment_upload_step2" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/upload_fragment_upload_authors_margin_top"
        android:orientation="horizontal"
        tools:listitem="@layout/item_author"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/upload_fragment_upload_step3_margin_top"
        android:textSize="@dimen/upload_fragment_upload_step_text"
        style="@style/AppTextView"
        android:textColor="@color/primary_text_light"
        android:text="@string/upload_fragment_upload_step3" />

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/upload_fragment_card_track_file_width"
        android:layout_height="@dimen/upload_fragment_card_track_file_height"
        android:layout_gravity="center"
        style="@style/AppCardView"
        app:cardCornerRadius="@dimen/upload_fragment_card_track_file_corner_radius"
        android:textAlignment="center"
        android:drawableEnd="@drawable/search_files"
        android:layout_marginTop="@dimen/upload_fragment_upload_track_title_margin_top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/AppTextView"
            android:textColor="@color/secondary_text_light"
            android:textSize="@dimen/upload_fragment_card_track_file_text"
            android:text="@string/upload_fragment_upload_track_raw_title_hint"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginEnd="@dimen/upload_fragment_card_track_file_icon_margin_right"
            android:src="@drawable/search_files" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/upload_fragment_upload_step4_margin_top"
        style="@style/AppTextView"
        android:text="@string/upload_fragment_upload_step4"
        android:textColor="@color/primary_text_light" />

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/upload_fragment_card_cover_file_width"
        android:layout_height="@dimen/upload_fragment_card_cover_file_height"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/upload_fragment_card_cover_file_margin_top"
        style="@style/AppCardView"
        app:cardCornerRadius="@dimen/upload_fragment_card_cover_file_corner_radius">

        <ImageView
            android:layout_width="@dimen/upload_fragment_card_cover_image_width"
            android:layout_height="@dimen/upload_fragment_card_cover_image_height"
            android:layout_gravity="start|center"
            android:scaleType="fitXY"
            android:layout_marginStart="@dimen/upload_fragment_card_cover_image_margin_start"
            android:src="@drawable/cover" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginEnd="@dimen/upload_fragment_card_cover_image_icon_margin_right"
            android:src="@drawable/search_images" />
        
    </androidx.cardview.widget.CardView>

</LinearLayout>